; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/leds/extr_ledtrig-adm5120-switch.c_adm5120_switch_trig_deactivate.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/leds/extr_ledtrig-adm5120-switch.c_adm5120_switch_trig_deactivate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32, %struct.port_state* }
%struct.port_state = type { i32 }

@dev_attr_port_state = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.led_classdev*)* @adm5120_switch_trig_deactivate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm5120_switch_trig_deactivate(%struct.led_classdev* %0) #0 {
  %2 = alloca %struct.led_classdev*, align 8
  %3 = alloca %struct.port_state*, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %2, align 8
  %4 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %5 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %4, i32 0, i32 1
  %6 = load %struct.port_state*, %struct.port_state** %5, align 8
  store %struct.port_state* %6, %struct.port_state** %3, align 8
  %7 = load %struct.port_state*, %struct.port_state** %3, align 8
  %8 = icmp ne %struct.port_state* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.led_classdev*, %struct.led_classdev** %2, align 8
  %12 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @device_remove_file(i32 %13, i32* @dev_attr_port_state)
  br label %15

15:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @device_remove_file(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
